kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exchange-rate-pod
  labels:
    app: exchange-rate
spec:
  containers:
  - name: exchange-rate
    image: dockercoins/rng
    ports:
    - containerPort: 9090
