kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange-rate
spec:
  type: LoadBalancer
  selector:
    app: exchange-rate
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
